# ros2-dev-docker

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INDICE_DOCUMENTACION.md  MAPA_PROYECTO.md  PLAN_ACCION_INMEDIATO.md  README.md  RESOLUCION_FINAL.md  RESUMEN_EJECUTIVO.md  docker-compose.yml  info.txt  supervisord.conf
.github/workflows/: ci.yaml
clean_v2/: README.md
clean_v2/docs/: ARCHITECTURE_AND_ROADMAP.md  AUDIT_PHASE1_DETAILED.md  AUDIT_PHASE2_DETAILED.md  AUDIT_PHASE3_DETAILED.md  AUDIT_PHASE4_DETAILED.md  AUDIT_PHASE5_DETAILED.md  AUDIT_PHASE6_DETAILED.md  AUDIT_PHASE7_DETAILED.md  AUDIT_PLAN.md  BEST_PRACTICES_FROM_PUBLIC_REPOS.md  MOVEIT2_BASE.md  NAV2_BASE.md  PLAN_ACCION.md  PROJECT_TREE.txt  QUICK_AUDIT_REFERENCE.md  ROADMAP.md  TEST_PLAN.md  UPSTREAM_REFERENCES.md  moveit_setup_mm1.md  quickstart_validation.md
clean_v2/docs/audit/: review_summary_20260112.md  review_summary_20260118.md
clean_v2/docs/legacy/: analisis_completado.md  implementacion_completa.md  problemas_actuales.md
clean_v2/docs/reference/: README.md
clean_v2/firmware/esp32/: esp32_funduino_joy.ino
clean_v2/ros2_ws/src/mm_arm_description/: CMakeLists.txt  package.xml
clean_v2/ros2_ws/src/mm_base_description/: CMakeLists.txt  package.xml
clean_v2/ros2_ws/src/mm_base_description/urdf/: mm_base.urdf.xacro  mm_base_macro.xacro
clean_v2/ros2_ws/src/mm_bringup/: CMakeLists.txt  package.xml
clean_v2/ros2_ws/src/mm_bringup/config/: arm_controllers.yaml.in  base_controllers.yaml  base_controllers.yaml.in  cmd_vel_mux.yaml.in  ekf.yaml.in  mm_controllers.yaml.in  nav2_params.yaml.in
clean_v2/ros2_ws/src/mm_bringup/launch/: base_min.launch.py  bringup_full.launch.py  cmd_vel_mux.launch.py  ekf.launch.py  nav2_min.launch.py  rqt_graph.launch.py  sim_min.launch.py  sim_mm.launch.py  sim_mm_dual.launch.py  teleop.launch.py
clean_v2/ros2_ws/src/mm_bringup/rviz/: mm_display.rviz.in  mm_full.rviz.in  mm_moveit.rviz.in  mm_nav2.rviz.in  mm_verify.rviz.in
clean_v2/ros2_ws/src/mm_bringup/scripts/: camera_frame_republisher.py  core_health_check.py  core_health_check.sh  ekf_optin_check.py  imu_frame_republisher.py  imu_stub_publisher.py  lidar_frame_republisher.py  nav2_optin_check.py  odom_relay.py  run_smoke_tests.sh  rviz_visual_descriptions.py  smoke_cameras.py  smoke_controllers.py  smoke_sim_time.py  smoke_tf.py
clean_v2/ros2_ws/src/mm_bringup/worlds/: minimal.world.sdf
clean_v2/ros2_ws/src/mm_moveit_config/: CMakeLists.txt  package.xml
clean_v2/ros2_ws/src/mm_moveit_config/config/: joint_limits.yaml.in  kinematics.yaml  mm_robot.srdf.xacro  moveit_controllers.yaml.in  ompl_planning.yaml  planning_scene_monitor_parameters.yaml  trajectory_execution.yaml
clean_v2/ros2_ws/src/mm_moveit_config/launch/: moveit.launch.py
clean_v2/ros2_ws/src/mm_moveit_config/rviz/: mm_moveit.rviz.in
clean_v2/ros2_ws/src/mm_moveit_config/scripts/: moveit_core_integration_check.sh  moveit_optin_check.py
clean_v2/ros2_ws/src/mm_robot_description/: CMakeLists.txt  package.xml
clean_v2/ros2_ws/src/mm_robot_description/urdf/: mm_robot.urdf.xacro
clean_v2/scripts/: core_health.sh
clean_v2/scripts/smoke/: smoke_ekf_local.sh  smoke_moveit.sh  smoke_multirobot.sh  smoke_nav2.sh  smoke_sim_basic.sh
docker/: xorg-dummy.conf
docs/: CONTROLLERS.md  SENSORS.md  TF_CONTRACT.md  estructura_pseudocodigo.md  presentacion_canvas.md
extras/esp32_funduino_joy/: esp32_funduino_joy.ino
ros2_ws/build_glx/mm_arm_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  symlink_install_manifest.txt
ros2_ws/build_glx/mm_arm_description/ament_cmake_core/: mm_arm_descriptionConfig.cmake  package.cmake
ros2_ws/build_glx/mm_arm_description/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
ros2_ws/build_glx/mm_base_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  symlink_install_manifest.txt
ros2_ws/build_glx/mm_bringup/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  symlink_install_manifest.txt
ros2_ws/install_glx/: local_setup.sh  setup.sh
ros2_ws/src/mm_arm_description/: CMakeLists.txt  package.xml
ros2_ws/src/mm_base_description/: CMakeLists.txt  package.xml
ros2_ws/src/mm_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/mm_bringup/config/: arm_controllers.yaml  arm_controllers.yaml.jinja2  base_controllers.yaml  base_controllers.yaml.jinja2  bridge_params.yaml  cmd_vel_mux.yaml  joy_teleop.yaml  mm_arm.srdf  moveit_controllers.yaml  moveit_kinematics.yaml  moveit_planning.yaml  moveit_planning_scene.yaml  moveit_servo.yaml  nav2_params.yaml
ros2_ws/src/mm_bringup/launch/: display.launch.py  modes.launch.py  moveit.launch.py  nav2.launch.py  sim.launch.py
ros2_ws/src/mm_bringup/maps/: blank.pgm  blank.yaml
ros2_ws/src/mm_bringup/models/Casual_female/: model.config  model.sdf
ros2_ws/src/mm_bringup/models/Chair/: model.config  model.sdf
ros2_ws/src/mm_bringup/models/CoffeeTable/: model.config  model.sdf
ros2_ws/src/mm_bringup/models/FemaleVisitorSit/: model.config  model.sdf
ros2_ws/src/mm_bringup/models/Jersey_Barrier/: model.config  model.sdf
ros2_ws/src/mm_bringup/models/MaleVisitorOnPhone/: model.config  model.sdf
ros2_ws/src/mm_bringup/models/Warehouse/: model.config  model.sdf
ros2_ws/src/mm_bringup/models/foldable_chair/: model.config  model.sdf
ros2_ws/src/mm_bringup/models/pallet_box_mobile/: model.config  model.sdf
ros2_ws/src/mm_bringup/models/shelf/: model.config  model.sdf
ros2_ws/src/mm_bringup/models/shelf_big/: model.config  model.sdf
ros2_ws/src/mm_bringup/rviz/: mm_display.rviz
ros2_ws/src/mm_bringup/scripts/: joint_state_aggregator.py  joy_teleop.py  robot_description_publisher.py
ros2_ws/src/mm_bringup/worlds/: minimal.headless.world.sdf  minimal.world.sdf  warehouse.sdf
(+111 files in other folders)
