<?xml version="1.0"?>
<package format="3">
  <name>mm_base_description</name>
  <version>0.1.0</version>
  <description>Descripcion de la base omni del manipulador movil.</description>
  <maintainer email="camilo.soto.v@usach.cl">Camilo Soto Villegas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
