<?xml version="1.0"?>
<package format="3">
  <name>mm_bringup</name>
  <version>0.1.0</version>
  <description>Bringup del manipulador movil con soporte multi-robot.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>mm_arm_description</exec_depend>
  <exec_depend>mm_base_description</exec_depend>
  <exec_depend>mm_robot_description</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>omni_wheel_drive_controller</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
