<?xml version="1.0"?>
<package format="3">
  <name>mm_moveit_config</name>
  <version>0.1.0</version>
  <description>Configuracion MoveIt 2 para el brazo y gripper del manipulador movil.</description>
  <maintainer email="camilo.soto.v@usach.cl">Camilo Soto Villegas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>mm_arm_description</exec_depend>
  <exec_depend>mm_robot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
