<?xml version="1.0"?>
<package format="3">
  <name>mm_robot_description</name>
  <version>0.1.0</version>
  <description>Descripcion combinada del manipulador movil (base + brazo).</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>mm_base_description</exec_depend>
  <exec_depend>mm_arm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
